# server/src/validators/aiValidations.js
@@ -6,3 +6,8 @@ export const userContentValidation = z.object({
       .min(1, 'userContent is required.')
       .max(500, 'userContent must be less than 500 characters.'),
 })
+
+export const uploadResumeValidation = z.object({
+   title: z.string().min(1, 'Title is required'),
+   resumeText: z.string().min(1, 'Resume text is required'),
+})
